# soca_octomap

./: .gitignore  README.md
gazebo_lib/hector_localization/message_to_tf/src/: message_to_tf.cpp
gazebo_lib/sim_gazebo_plugins/: CMakeLists.txt  package.xml
gazebo_lib/sim_gazebo_plugins/src/: plugin_build_octomap.cpp
gazebo_lib/sim_gazebo_plugins/srv/: Octomap.srv
gazebo_lib/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
octomap_lib/octomap_mapping/: README.md
octomap_lib/octomap_mapping/octomap_server/launch/: octomap_mapping.launch
soca_octomap/: CMakeLists.txt  package.xml
soca_octomap/cfg/: OctomapDoseServer.cfg
soca_octomap/config/: coverage_eval_config.yaml  heatmap_eval_config.yaml
soca_octomap/example/octomaps/: diff_octomap.bt  meas_octomap.bt  meas_octomap.ot  ref_octomap.bt
soca_octomap/example/rviz/: example.rviz
soca_octomap/example/urdf/: example.gazebo.xacro  example.urdf.xacro
soca_octomap/example/worlds/: block_and_cylinder.world
soca_octomap/include/soca_octomap/: OcTreeDose.hpp  OctomapDoseServer.hpp  tinycolormap.hpp
soca_octomap/launch/: coverage_eval.launch  example.launch  heatmap_eval.launch  octomap_dose_mapping.launch  velodyne_tf.launch
soca_octomap/scripts/: coverage_eval_node.cpp  heatmap_eval_node.cpp  octomap_dose_saver_node.cpp  octomap_dose_server_node.cpp
soca_octomap/src/: OcTreeDose.cpp  OctomapDoseServer.cpp
