<?xml version="1.0"?>
<package format="2">
  <name>sim_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The sim_gazebo_plugins package</description>

  <maintainer email="majorpr13@todo.todo">majorpr13</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/sim_gazebo</url> -->


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_dev</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>
</package>
